traces/bug_356.txt
examples++-mpi/hips_FreeFem.cpp:388: error: DEAD_STORE
  The value written to &ic (type int) is never used.
Showing all 1 steps of the trace


examples++-mpi/hips_FreeFem.cpp:388:5: Write of unused value
386.       else eps = param_double[0];
387.   
388.       ic = param_int[0];
           ^
389.       scale=param_int[9];
390.       
